* Added the zen_BinaryEntityBuilder_writeConstantPoolLongEx() function.  * Prepared the binary entity generator algorithms previously designed with a flawed byte code generator. It can now be integrated with the new binary entity builder, which is more flexible.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ set (
 
     # Generator
 
+    ${PROJECT_SOURCE_DIR}/source/com/onecube/zen/compiler/generator/BinaryEntityGenerator.c
     ${PROJECT_SOURCE_DIR}/source/com/onecube/zen/compiler/generator/BinaryEntityBuilder.c
     ${PROJECT_SOURCE_DIR}/source/com/onecube/zen/compiler/generator/DataChannel.c
 
