* The generator can now write instruction attributes for functions.  * Implemented constructor and destructor for InstructionAttribute.  * Added zen_BinaryEntityBuilder_writeInstructionAttribute() to the binary entity builder.  * Fixed a few bugs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,6 +159,7 @@ set (
     ${PROJECT_SOURCE_DIR}/source/com/onecube/zen/virtual-machine/feb/Instruction.c
     ${PROJECT_SOURCE_DIR}/source/com/onecube/zen/virtual-machine/feb/FieldEntity.c
     ${PROJECT_SOURCE_DIR}/source/com/onecube/zen/virtual-machine/feb/FunctionEntity.c
+    ${PROJECT_SOURCE_DIR}/source/com/onecube/zen/virtual-machine/feb/attribute/InstructionAttribute.c
     ${PROJECT_SOURCE_DIR}/source/com/onecube/zen/Zen.c
 )
 
