The virtual machine now accepts the main class to execute.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,17 +189,14 @@ link_directories(${JTK_LIBRARY_DIRS})
 
 message(WARNING ${JTK_CFLAGS})
 
-add_executable (zen ${ZEN_PUBLIC_HEADERS} ${ZEN_COMMON_SOURCE} ${ZEN_COMPILER_SOURCE} ${ZEN_COMPILER_TOOL_SOURCE} ${ZEN_PRIVATE_HEADERS})
-target_link_libraries(zen ${JTK_LIBRARIES} m)
-target_include_directories(zen SYSTEM PUBLIC ${JTK_INCLUDE_DIRS})
-# target_compile_options(zen PUBLIC -Wall -Wswitch)
-target_compile_options(zen PUBLIC -g -w ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
-
-
+add_executable (zc ${ZEN_PUBLIC_HEADERS} ${ZEN_COMMON_SOURCE} ${ZEN_COMPILER_SOURCE} ${ZEN_COMPILER_TOOL_SOURCE} ${ZEN_PRIVATE_HEADERS})
+target_link_libraries(zc ${JTK_LIBRARIES} m)
+target_include_directories(zc SYSTEM PUBLIC ${JTK_INCLUDE_DIRS})
+# target_compile_options(zc PUBLIC -Wall -Wswitch)
+target_compile_options(zc PUBLIC -g -w ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
 
 # add_executable (zsv ${ZEN_PUBLIC_HEADERS} ${ZEN_COMMON_SOURCE} ${ZEN_ZVM_SPECIFICATION_VIEWER} ${ZEN_PRIVATE_HEADERS})
 # target_compile_options(zsv PUBLIC -Wall -Wswitch)
-
 
 add_executable(zvm ${ZEN_COMMON_SOURCE} ${ZEN_VIRTUAL_MACHINE_SOURCE} ${ZEN_VIRTUAL_MACHINE_TOOL_SOURCE})
 target_link_libraries(zvm ${JTK_LIBRARIES} -lm)
