Fixed a few bugs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -212,13 +212,13 @@ target_compile_options(zc PUBLIC -g -w ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
 add_executable(zvm ${ZEN_COMMON_SOURCE} ${ZEN_VIRTUAL_MACHINE_SOURCE} ${ZEN_VIRTUAL_MACHINE_TOOL_SOURCE})
 target_link_libraries(zvm ${JTK_LIBRARIES} -lm)
 target_include_directories(zvm SYSTEM PUBLIC ${JTK_INCLUDE_DIRS})
-#target_compile_options(zvm PUBLIC -O3 -DNDEBUG -DJTK_LOGGER_DISABLE -w ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
-target_compile_options(zvm PUBLIC -g -w ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
+target_compile_options(zvm PUBLIC -O3 -DNDEBUG -DJTK_LOGGER_DISABLE -w ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
+#target_compile_options(zvm PUBLIC -g -w ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
 # target_compile_options(zvm PUBLIC -g -Wall ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
 
 add_executable(zd ${ZEN_COMMON_SOURCE} ${ZEN_DISASSEMBLER_SOURCE})
 target_link_libraries(zd ${JTK_LIBRARIES} -lm)
 target_include_directories(zd SYSTEM PUBLIC ${JTK_INCLUDE_DIRS})
-#target_compile_options(zd PUBLIC -O3 -DNDEBUG -DJTK_LOGGER_DISABLE -w ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
-target_compile_options(zd PUBLIC -g -w ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
+target_compile_options(zd PUBLIC -O3 -DNDEBUG -DJTK_LOGGER_DISABLE -w ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
+#target_compile_options(zd PUBLIC -g -w ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
 # target_compile_options(zd PUBLIC -g -Wall ${JTK_CFLAGS} ${JTK_CFLAGS_OTHER})
